# flatshare-bot

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  iter.rs  log.rs  main.rs  needed.rs  store.rs
