[package]
name = "martini-bot"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]


[dependencies]
regex_macros = "*"
rustc-serialize = "*"
itertools = "*"
strsim = "*"
term-painter = "*"

[dependencies.regex]
version = "*"
features = ["pattern"]

[dependencies.telegram-bot]
path = "/home/lukas/dev/telegram-bot"
